// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdk-graph/filtering filter cfnType excludeCfnType should not have excluded types 1`] = `
Object {
  "AWS::EC2::EIP": 1,
  "AWS::EC2::Instance": 2,
  "AWS::EC2::InternetGateway": 1,
  "AWS::EC2::NatGateway": 1,
  "AWS::EC2::Route": 6,
  "AWS::EC2::RouteTable": 6,
  "AWS::EC2::SecurityGroup": 3,
  "AWS::EC2::Subnet": 6,
  "AWS::EC2::SubnetRouteTableAssociation": 6,
  "AWS::EC2::VPC": 1,
  "AWS::EC2::VPCGatewayAttachment": 1,
  "AWS::IAM::InstanceProfile": 2,
  "AWS::IAM::Role": 0,
  "AWS::Lambda::Alias": 1,
  "AWS::Lambda::Function": 0,
  "AWS::RDS::DBInstance": 1,
  "AWS::RDS::DBSubnetGroup": 1,
  "AWS::S3::Bucket": 2,
  "AWS::SecretsManager::Secret": 1,
  "AWS::SecretsManager::SecretTargetAttachment": 1,
}
`;

exports[`cdk-graph/filtering filter cfnType excludeCfnType should not have filter types nodes 1`] = `
Object {
  "AWS::EC2::EIP": 1,
  "AWS::EC2::Instance": 2,
  "AWS::EC2::InternetGateway": 1,
  "AWS::EC2::NatGateway": 1,
  "AWS::EC2::Route": 6,
  "AWS::EC2::RouteTable": 6,
  "AWS::EC2::SecurityGroup": 3,
  "AWS::EC2::Subnet": 6,
  "AWS::EC2::SubnetRouteTableAssociation": 6,
  "AWS::EC2::VPC": 1,
  "AWS::EC2::VPCGatewayAttachment": 1,
  "AWS::IAM::InstanceProfile": 2,
  "AWS::IAM::Role": 0,
  "AWS::Lambda::Alias": 1,
  "AWS::Lambda::Function": 0,
  "AWS::RDS::DBInstance": 1,
  "AWS::RDS::DBSubnetGroup": 1,
  "AWS::S3::Bucket": 2,
  "AWS::SecretsManager::Secret": 1,
  "AWS::SecretsManager::SecretTargetAttachment": 1,
}
`;

exports[`cdk-graph/filtering filter cfnType includeCfnType should only have included types 1`] = `
Object {
  "AWS::EC2::EIP": 0,
  "AWS::EC2::Instance": 0,
  "AWS::EC2::InternetGateway": 0,
  "AWS::EC2::NatGateway": 0,
  "AWS::EC2::Route": 0,
  "AWS::EC2::RouteTable": 0,
  "AWS::EC2::SecurityGroup": 0,
  "AWS::EC2::Subnet": 0,
  "AWS::EC2::SubnetRouteTableAssociation": 0,
  "AWS::EC2::VPC": 0,
  "AWS::EC2::VPCGatewayAttachment": 0,
  "AWS::IAM::InstanceProfile": 0,
  "AWS::IAM::Role": 5,
  "AWS::Lambda::Alias": 0,
  "AWS::Lambda::Function": 3,
  "AWS::RDS::DBInstance": 0,
  "AWS::RDS::DBSubnetGroup": 0,
  "AWS::S3::Bucket": 0,
  "AWS::SecretsManager::Secret": 0,
  "AWS::SecretsManager::SecretTargetAttachment": 0,
}
`;

exports[`cdk-graph/filtering filter custom should only have filter type edge 1`] = `
Object {
  "DEPENDENCY": 0,
  "REFERENCE": 15,
}
`;

exports[`cdk-graph/filtering filter custom should only have filter types nodes 1`] = `
Object {
  "AWS::EC2::EIP": 0,
  "AWS::EC2::Instance": 0,
  "AWS::EC2::InternetGateway": 0,
  "AWS::EC2::NatGateway": 0,
  "AWS::EC2::Route": 0,
  "AWS::EC2::RouteTable": 0,
  "AWS::EC2::SecurityGroup": 0,
  "AWS::EC2::Subnet": 0,
  "AWS::EC2::SubnetRouteTableAssociation": 0,
  "AWS::EC2::VPC": 0,
  "AWS::EC2::VPCGatewayAttachment": 0,
  "AWS::IAM::InstanceProfile": 0,
  "AWS::IAM::Role": 5,
  "AWS::Lambda::Alias": 0,
  "AWS::Lambda::Function": 3,
  "AWS::RDS::DBInstance": 0,
  "AWS::RDS::DBSubnetGroup": 0,
  "AWS::S3::Bucket": 0,
  "AWS::SecretsManager::Secret": 0,
  "AWS::SecretsManager::SecretTargetAttachment": 0,
}
`;

exports[`cdk-graph/filtering filter nodeType excludeNodeType should not have excluded nodes 1`] = `
Object {
  "AWS::EC2::EIP": 1,
  "AWS::EC2::Instance": 2,
  "AWS::EC2::InternetGateway": 1,
  "AWS::EC2::NatGateway": 1,
  "AWS::EC2::Route": 6,
  "AWS::EC2::RouteTable": 6,
  "AWS::EC2::SecurityGroup": 3,
  "AWS::EC2::Subnet": 6,
  "AWS::EC2::SubnetRouteTableAssociation": 6,
  "AWS::EC2::VPC": 1,
  "AWS::EC2::VPCGatewayAttachment": 1,
  "AWS::IAM::InstanceProfile": 2,
  "AWS::IAM::Role": 6,
  "AWS::Lambda::Alias": 1,
  "AWS::Lambda::Function": 3,
  "AWS::RDS::DBInstance": 1,
  "AWS::RDS::DBSubnetGroup": 1,
  "AWS::S3::Bucket": 2,
  "AWS::SecretsManager::Secret": 1,
  "AWS::SecretsManager::SecretTargetAttachment": 1,
}
`;

exports[`cdk-graph/filtering filter nodeType include should only have included nodes 1`] = `
Object {
  "AWS::EC2::EIP": 1,
  "AWS::EC2::Instance": 2,
  "AWS::EC2::InternetGateway": 1,
  "AWS::EC2::NatGateway": 1,
  "AWS::EC2::Route": 6,
  "AWS::EC2::RouteTable": 6,
  "AWS::EC2::SecurityGroup": 3,
  "AWS::EC2::Subnet": 6,
  "AWS::EC2::SubnetRouteTableAssociation": 6,
  "AWS::EC2::VPC": 1,
  "AWS::EC2::VPCGatewayAttachment": 1,
  "AWS::IAM::InstanceProfile": 2,
  "AWS::IAM::Role": 6,
  "AWS::Lambda::Alias": 1,
  "AWS::Lambda::Function": 3,
  "AWS::RDS::DBInstance": 1,
  "AWS::RDS::DBSubnetGroup": 1,
  "AWS::S3::Bucket": 2,
  "AWS::SecretsManager::Secret": 1,
  "AWS::SecretsManager::SecretTargetAttachment": 1,
}
`;
